--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "sass": "^1.69.5",
+    "scss": "^0.2.4",
+    "sweetalert2": "^11.9.0",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
+    "url-join": "^5.0.0",
     "vue": "^3.3.4",
+    "vue-class-component": "^8.0.0-0",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -36,6 +44,6 @@
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.19"
+    "vue-tsc": "^1.8.22"
   }
 }
