--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.69.5",
     "scss": "^0.2.4",
     "sweetalert2": "^11.9.0",
+    "tsx": "^3.14.0",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "url-join": "^5.0.0",
