--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url-join": "^5.0.0",
     "vue": "^3.3.4",
     "vue-class-component": "^8.0.0-0",
-    "vue-property-decorator": "^9.1.2",
+    "vue-custom-element": "^3.3.0",
+    "vue-property-decorator": "^10.0.0-rc3",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
