--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,13 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.md", "src/**/*.json"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.ts", "src/**/*.vue", "src/**/*.md", "src/**/*.json"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "experimentalDecorators": true
   }
 }
